@@ -27,6 +27,7 @@ New user-visible features
 Bugs fixed
 ----------
 - Bug 1722 - beacons transmitted concurrently
+- Bug 1616 - WifiPhyStateHelper reports false CCA_BUSY times at State trace source
 
 Release 3.18
 =============
